--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <!-- TODO: Add header here -->
   <header>
     <article>
-      <div>
-        <h1>Pete Thinkful | Artist</h1>
+      <div> <!-- my understanding was that this centers content -->
+        <h1>Pete Thinkful | Artist</h1> <!-- used h1 header to emphasize the heading -->
         <nav>
           <a href="#about">About</a>
           &emsp;
@@ -31,16 +31,16 @@
     <!-- TODO: Add About section here -->
 
     <article id="about">
-      <div>
-        <h2>About</h2>
-        <h3>Hi! I'm Pete Thinkful</h3>
+      <div> <!-- my understanding was that this centers content -->
+        <h2>About</h2>  <!-- used h2 header to emphasize the heading but not as large as h1 -->
+        <h3>Hi! I'm Pete Thinkful</h3> <!-- used h3 header to emphasize the heading but not as large as h2 -->
         <img class="image-circle" src="images/pete-thinkful.png" alt="Pete Thinkful">
       </div>
     </article>
     <p>I'm an artist living in Denver, Colorado.</p>
     <p>As an artist, I'm interested in:</p>
 
-    <ul>
+    <ul> <!-- used ul to "bullet" list interests -->
       <li>Producing abstract art</li>
       <li>Creating street graffiti art</li>
       <li>Connecting with like-minded artists</li>
@@ -49,8 +49,8 @@
     <p>Please feel free to take a look at my website and feel free to <a href="#contact">contact me</a>.</p>
 
     <article>
-      <div>
-        <h3>Pete's Background
+      <div>  <!-- my understanding was that this centers content -->
+        <h3>Pete's Background <!-- used h3 header to emphasize the heading but not as large as h2 -->
         </h3>
       </div>
 
@@ -64,11 +64,11 @@
 
     </article>
 
-    <hr>
-
+    <hr> <!-- hr to create a break and mimic the mockup -->
+ 
     <!-- TODO: Add Portfolio section here -->
     <article id="portfolio">
-      <div>
+      <div> <!-- my understanding was that this centers content -->
         <h2>Portfolio
         </h2>
         <h3>Abstract Red</h3>
@@ -76,13 +76,13 @@
       </div>
       <p>Vaporware wayfarers heirloom neutra disrupt. Activated charcoal
         waistcoat scenester hell of.</p>
-      <div>
+      <div> <!-- my understanding was that this centers content -->
         <h3>Spiral Zany</h3>
         <img src="images/spiral-zany.png" alt="Spiral Zany">
       </div>
       <p>Sriracha portland taxidermy cronut messenger bag, vegan
         distillery. Vaporware kickstarter air plant mumblecore food truck.</p>
-      <div>
+      <div> <!-- my understanding was that this centers content -->
         <h3>Melted Rainbow</h3>
         <img src="images/melted-rainbow.png" alt="Melted Rainbow">
       </div>
@@ -94,7 +94,7 @@
 
     <!-- TODO: Add Contact section here -->
     <article id="contact">
-      <div>
+      <div> <!-- my understanding was that this centers content -->
         <h2>Contact
         </h2>
       </div>
@@ -112,7 +112,7 @@
 
   <!-- Footer section -->
   <footer>
-    <div>
+    <div> <!-- my understanding was that this centers content -->
       <p>© Pete Thinkful. All rights reserved.</p>
     </div>
   </footer>
