--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> <!-- webpage to be displayed in English -->
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pete Thinkful</title>
+  <title>Pete Thinkful</title> <!-- This is the webpage title/tag -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-  <!-- TODO: Add header here -->
+  <!-- header here -->
   <header>
     <article>
-      <div> <!-- my understanding was that this centers content -->
+      <div> 
         <h1>Pete Thinkful | Artist</h1> <!-- used h1 header to emphasize the heading -->
-        <nav>
-          <a href="#about">About</a>
+        <nav> <!-- add About, Portfolio, and Contact links with the h2 heading. Also, have all links be red then orange when hovered -->
+          <a href="#about">About</a> 
           &emsp;
           <a href="#portfolio">Portfolio</a>
           &emsp;
@@ -28,15 +28,15 @@
   </header>
 
   <main>
-    <!-- TODO: Add About section here -->
+    <!-- Add About section here -->
 
     <article id="about">
-      <div> <!-- my understanding was that this centers content -->
-        <h2>About</h2>  <!-- used h2 header to emphasize the heading but not as large as h1 -->
-        <h3>Hi! I'm Pete Thinkful</h3> <!-- used h3 header to emphasize the heading but not as large as h2 -->
+      <div> 
+        <h2>About</h2>  <!-- use h2 heading to separate from the header and keep consistent with links font size -->
+        <h3>Hi! I'm Pete Thinkful</h3> <!-- use h3 heading to separate from the links header -->
         <img class="image-circle" src="images/pete-thinkful.png" alt="Pete Thinkful">
       </div>
-    </article>
+    </article> <!-- note pertinent information about the artist -->
     <p>I'm an artist living in Denver, Colorado.</p>
     <p>As an artist, I'm interested in:</p>
 
@@ -49,8 +49,8 @@
     <p>Please feel free to take a look at my website and feel free to <a href="#contact">contact me</a>.</p>
 
     <article>
-      <div>  <!-- my understanding was that this centers content -->
-        <h3>Pete's Background <!-- used h3 header to emphasize the heading but not as large as h2 -->
+      <div>  
+        <h3>Pete's Background <!-- use h3 heading to separate from the links header -->
         </h3>
       </div>
 
@@ -64,44 +64,44 @@
 
     </article>
 
-    <hr> <!-- hr to create a break and mimic the mockup -->
+    <hr> <!-- hr to create a break between sections to mimic separation of the <nav> links -->
  
     <!-- TODO: Add Portfolio section here -->
     <article id="portfolio">
-      <div> <!-- my understanding was that this centers content -->
-        <h2>Portfolio
+      <div> 
+        <h2>Portfolio <!-- use h2 heading to separate from the header and keep consistent with links font size -->
         </h2>
-        <h3>Abstract Red</h3>
+        <h3>Abstract Red</h3> <!-- use h3 heading to separate from the links header -->
         <img src="images/abstract-red.png" alt="Abstract Red">
       <p>Vaporware wayfarers heirloom neutra disrupt. Activated charcoal
         waistcoat scenester hell of.</p>
       </div>
-       <div> <!-- my understanding was that this centers content -->
-        <h3>Spiral Zany</h3>
+       <div> 
+        <h3>Spiral Zany</h3> <!-- use h3 heading to separate from the links header -->
         <img src="images/spiral-zany.png" alt="Spiral Zany">
       <p>Sriracha portland taxidermy cronut messenger bag, vegan
         distillery. Vaporware kickstarter air plant mumblecore food truck.</p>
        </div>
-      <div> <!-- my understanding was that this centers content -->
-        <h3>Melted Rainbow</h3>
+      <div> 
+        <h3>Melted Rainbow</h3> <!-- use h3 heading to separate from the links header -->
         <img src="images/melted-rainbow.png" alt="Melted Rainbow">
       <p>Edison bulb single-origin coffee snackwave, actually ennui
         locavore shabby chic forage.</p>
       </div>
      </article>
 
-    <hr>
+    <hr><!-- hr to create a break between sections to mimic separation of the <nav> links -->
 
-    <!-- TODO: Add Contact section here -->
+    <!-- Contact section here using h2 heading -->
     <article id="contact">
       <div> <!-- my understanding was that this centers content -->
-        <h2>Contact
+        <h2>Contact <!-- use h2 heading to separate from the header and keep consistent with links font size -->
         </h2>
       </div>
 
       <p>I'd love to hear from you! Please feel free to contact or follow me:</p>
 
-      <ol>
+      <ol> <!-- use ol to number the artist media list -->
         <li> <a href="#LinkedIn">LinkedIn</a></li>
         <li> <a href="#Instagram">Instagram</a></li>
         <li><a href="#Pinterest">Pinterest</a></li>
@@ -111,13 +111,11 @@
   </main>
 
   <!-- Footer section -->
-  <footer>
-    <div> <!-- my understanding was that this centers content -->
+  <footer> <!-- keep this centered -->
+    <div> 
       <p>© Pete Thinkful. All rights reserved.</p>
     </div>
   </footer>
 </body>
 
 </html>
-
-<!-- why are all 7 Errors and Warnings showing up? in https://validator.w3.org/nu/#textarea, especially when it looks very similiar to the outcome: https://overview.thinkful.com/curriculum/WEB_DEVELOPMENT-501/introduction-to-web-development/introduction-to-html-css-fundamentals-v2/modeng-build-your-portfolio-web-page -->
